[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-ai-env"
version = "0.1.0"
description = "Autonomous AI agent for office workflow automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "openai==2.30.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "httpcore==1.0.9",
    "anyio==4.13.0",
    "annotated-types==0.7.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "certifi==2026.2.25",
    "colorama==0.4.6",
    "distro==1.9.0",
    "idna==3.11",
    "sniffio==1.3.1",
    "tqdm==4.67.3",
]

[project.scripts]
server = "server.app:main"